--- a/auth-server/src/main/resources/templates/login.html
+++ b/auth-server/src/main/resources/templates/login.html
@@ -5,8 +5,8 @@
 <body>
 	<form id="login-form" class="text-center border rounded p-5"
 		th:action="@{/login}" method="post">
-		<img id="logo-myservice" src='../static/img/service-logo.png'
-			th:src='@{/img/service-logo.png}' /> <input type="text"
+		<img id="logo-myservice" src='../static/img/my-service-logo.png'
+			th:src='@{/img/my-service-logo.png}' /> <input type="text"
 			class="form-control mb-4" placeholder="Username" name="username">
 		<input type="password" class="form-control mb-4"
 			placeholder="Password" name="password"> <input type="hidden"
