--- a/foodie-frontend/src/app/modules/auth/login/login.component.html
+++ b/foodie-frontend/src/app/modules/auth/login/login.component.html
@@ -34,6 +34,6 @@
         </div>
     </div>
     <div *ngIf="error" class="alert alert-danger" role="alert">
-        Nalog sa unestom email adresom ne postoji.<br> Možete se prijaviti pomoću ponuđenih servisa ili
+        Nalog sa unetim kredencijalima ne postoji na Foodie aplikaciji.<br> Možete se prijaviti pomoću ponuđenih servisa ili
         <a routerLink="/register" class="alert-link">kreirati nalog </a> na Foodie-u.</div>
 </div>
