--- a/foodie-frontend/src/app/modules/order/shopping-cart/shopping-cart.component.css
+++ b/foodie-frontend/src/app/modules/order/shopping-cart/shopping-cart.component.css
@@ -24,5 +24,10 @@ img {
 
 #create-order {
     width: 147px;
-    margin-bottom: 3px;
+    margin-bottom: 4px;
+    margin-left: -12px;
+}
+
+.ok {
+    background-color: #ECA106;
 }
