--- a/auth-server/src/main/resources/templates/authorize.html
+++ b/auth-server/src/main/resources/templates/authorize.html
@@ -1,30 +1,41 @@
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+	xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
-<link href="../static/css/bootstrap.css" rel="stylesheet"
-	th:href="@{/css/bootstrap.css}" />
+<div th:replace="fragments/head :: css-js"></div>
 </head>
 <body>
-	<div class="container">
-		<h2>Please Confirm</h2>
-
-		<div
-			th:text="'Do you authorize' + ${authorizationRequest.clientId} + 'at' +
-			${authorizationRequest.redirectUri} + 'to access your protected
-			resources with scope' +  ${authorizationRequest.scope}"></div>
-		<form id="confirmationForm" name="confirmationForm"
-			th:action="@{../oauth/authorize}" method="post">
-			<input name="user_oauth_approval" value="true" type="hidden" /> <input
-				type="hidden" id="csrf_token" name="${_csrf.parameterName}"
-				value="${_csrf.token}" />
-			<button class="btn btn-primary" type="submit">Approve</button>
-		</form>
-		<form id="denyForm" name="confirmationForm"
-			th:action="@{../oauth/authorize}" method="post">
-			<input name="user_oauth_approval" value="false" type="hidden" /> <input
-				type="hidden" id="csrf_token" name="${_csrf.parameterName}"
-				value="${_csrf.token}" />
-			<button class="btn btn-primary" type="submit">Deny</button>
-		</form>
+	<nav th:replace="fragments/head :: navbar"></nav>
+	<div class="authorize text-center border rounded p-5">
+		<h3>Please confirm</h3>
+		<br>
+		<br>
+		<p>Do you authorize</p>
+		<b th:text="${authorizationRequest.clientId}"></b>
+		<p>to access your protected resources</p>
+		<b th:text="${#strings.replace(authorizationRequest.scope,'_',' ')}"></b>
+		<p>?</p>
+		<br>
+		<br>
+		<div class="row">
+			<div class="col-6">
+				<form id="confirmationForm" name="confirmationForm"
+					th:action="@{../oauth/authorize}" method="post">
+					<input name="user_oauth_approval" value="true" type="hidden" /> <input
+						type="hidden" id="csrf_token" name="${_csrf.parameterName}"
+						value="${_csrf.token}" />
+					<button class="btn btn-info btn-block" type="submit">Approve</button>
+				</form>
+			</div>
+			<div class="col-6">
+				<form id="denyForm" name="confirmationForm"
+					th:action="@{../oauth/authorize}" method="post">
+					<input name="user_oauth_approval" value="false" type="hidden" /> <input
+						type="hidden" id="csrf_token" name="${_csrf.parameterName}"
+						value="${_csrf.token}" />
+					<button class="btn btn-info btn-block" type="submit">Deny</button>
+				</form>
+			</div>
+		</div>
 	</div>
 </body>
 </html>
